Function for timer countDown to appear after .createElement with Transversing the DOM; setted new attributes, changed answers as <button> not <p>...

--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,11 @@ nav h1 {
     color: #00d000;
 }
 
+.answer-btn {
+    min-width: 120px;
+    max-width: 120px;
+}
+
 .btn-play {
     color:beige;
     background-color: #00d000;
